Fix navbar centering on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ publications
 }
 
 .pub-content {
-    background:#fff;
+    background:transparent;
     position:relative;
     margin-left:60px;
     padding:40px 60px 0px 0px;
@@ -238,18 +238,13 @@ media queries
     .pub-content {
         margin-right: 0px;
         margin-top: 30px;
+        padding: 30px 0 0 0;
     }
-
 }
 
 @media (max-width:320px) {
     
     .intro-content {
         padding:60px 0 0;
-    }
-
-    .pub-content {
-        margin-right: 0px;
-        padding:0 0 0;
     }
 }
